--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
+    width: 100vw;
+    height: 100vh;
     background: linear-gradient(#269dff, #243dff) no-repeat !important;
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -23,7 +25,6 @@ canvas.active {
 }
 
 button {
-    margin: 0 0 3.8rem 0;
     padding: 10px 10px 10px 10px;
     background-color: #243966;
     font-size: 1rem;
