--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); /* Importiere die Schriftart "Roboto" in allen Varianten */
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap');
 
 body { /* Definiere den Hintergrund */
     height: 100%; /* Sage, dass der Hintergrund eine Höhe von 100% hat */
     background: linear-gradient(#243dff, #269dff) no-repeat; /* Setze den Farbverlauf vom Hintergrund und sage, dass er sich nicht wiederholen soll */
-    font-family: 'Roboto', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht geladen werden kann */
+    font-family: 'Rubik Bubbles', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht geladen werden kann */
     display: flex; /* Setze die Objekt-Ausrichtung auf flex */
     flex-direction: column; /* Sage, dass alle Objekt untereinander angezeigt werden sollen */
     justify-content: center; /* Sage, dass alle Objekte auf der X Achse zentriert werden sollen */
@@ -21,7 +22,7 @@ body { /* Definiere den Hintergrund */
     padding: 1rem 1rem 1rem 1rem; /* Setze die Größe vom Objekt auf 10px in jede Richtung */
     background: antiquewhite; /* Setze die Hintergrundfabre auf "antiquewhite" */
     font-size: 1rem; /* Setze die Schriftgröße auf 10px */
-    font-family: 'Roboto', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht gelanden werden kann */
+    font-family: 'Rubik Bubbles', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht gelanden werden kann */
     letter-spacing: 1.5px; /* Setze die größte vom Leerzeichen auf 1.5px */
     text-decoration: underline; /* Unterstriche den Text */
     color: midnightblue; /* Setze die Schriftfarbe auf "midnightblue" */
@@ -33,7 +34,7 @@ body { /* Definiere den Hintergrund */
 
 .start-button:hover { /* Definiere das Objekt mit der Klasse ".start-button", wenn die Maus über ihm ist */
     transition: 250ms; /* Seite die Animationszeit auf 250ms */
-    font-family: 'Roboto', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht geladen werden kann */
+    font-family: 'Rubik Bubbles', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht geladen werden kann */
     color: antiquewhite; /* Setze die Schriftfarbe auf "antiquewhite" */
     background: midnightblue; /* Setze die Hintergrundfarbe auf "midnightblue" */
 }
