--- a/style.css
+++ b/style.css
@@ -1,65 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-body { /* Definiere den Hintergrund */
-    height: 100%; /* Sage, dass der Hintergrund eine Höhe von 100% hat */
-    background: linear-gradient(#243dff, #269dff) no-repeat; /* Setze den Farbverlauf vom Hintergrund und sage, dass er sich nicht wiederholen soll */
-    font-family: 'Rubik Doodle Shadow', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht geladen werden kann */
-    display: flex; /* Setze die Objekt-Ausrichtung auf flex */
-    flex-direction: column; /* Sage, dass alle Objekt untereinander angezeigt werden sollen */
-    justify-content: center; /* Sage, dass alle Objekte auf der X Achse zentriert werden sollen */
-    align-items: center; /* Sage, dass alle Objekte auf der Y Achse zentriert werden sollen */
+:root {
+    --font: 'Open Sans', sans-serif;
+    --border: rgb(0, 250, 240) .5px solid;
+    --borderRadius: 7px;
+    --transitionDelay: 250ms;
+    --textColor: rgb(0, 250, 240);
+    --letterSpace: 1.2px;
 }
 
-.snake-canvas { /* Definiere das Objekt mit der Klasse ".snake-canvas" */
-    margin: 1rem 0 1.5rem 0; /* Setze den Abstand zu anderen Objekten (Oben, Links, Unten, Rechts) */
-    z-index: 10; /* Setze die Z Achse vom Objekt auf 10 */
-    border: black .5px solid; /* Setze die Umrandung des Objekts auf eine solide, weiße, 1/2 Pixel dicke linie */
-    border-radius: 5px; /* Sage, dass die Ecken 5px abgerunden sind */
+body {
+    height: 100%;
+    background-color: rgb(30, 50, 180);
+    background-image: linear-gradient(320deg, rgb(30, 50, 180) 0%, rgb(20, 35, 20) 70%);
+    font-family: var(--font);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.snake-canvas {
+    border: var(--border);
+    border-radius: var(--borderRadius);
+    margin-bottom: 1rem;
 }
 
 .snake-canvas:hover.active {
     cursor: none;
 }
 
-.start-button { /* Definiere das Objekt mit der Klasse ".start-button" */
-    padding: 1rem 1rem 1rem 1rem; /* Setze die Größe vom Objekt auf 10px in jede Richtung */
-    background: antiquewhite; /* Setze die Hintergrundfabre auf "antiquewhite" */
-    font-size: 1rem; /* Setze die Schriftgröße auf 10px */
-    font-family: 'Rubik Doodle Shadow', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht gelanden werden kann */
-    letter-spacing: 1.5px; /* Setze die größte vom Leerzeichen auf 1.5px */
-    text-decoration: underline; /* Unterstriche den Text */
-    color: midnightblue; /* Setze die Schriftfarbe auf "midnightblue" */
-    border: black .5px solid; /* Setze die Umrandung des Objekts auf eine solide, weiße, 1/2 Pixel dicke linie */
-    border-radius: 5px; /* Sage, dass die Ecken 5px abgerundet sind */
-    transition: 250ms; /* Setze die Animationszeit auf 250ms */
-    cursor: pointer; /* Sage, dass der Mauszeiger wie ein aussehen soll, wie ein "Pointer" */
+.start-button {
+    padding: 1rem 1rem 1rem 1rem;
+    background-color: rgb(60, 60, 60);
+    font-size: 1rem;
+    font-family: var(--font);
+    letter-spacing: var(--letterSpace);
+    text-decoration: underline;
+    color: var(--textColor);
+    border: var(--border);
+    border-radius: var(--borderRadius);
+    transition: var(--transitionDelay);
+    cursor: pointer;
 }
 
-.start-button:hover { /* Definiere das Objekt mit der Klasse ".start-button", wenn die Maus über ihm ist */
-    transition: 250ms; /* Seite die Animationszeit auf 250ms */
-    font-family: 'Rubik Doodle Shadow', sans-serif; /* Setze die Schriftart und definiere eine andere, falls diese nicht geladen werden kann */
-    color: antiquewhite; /* Setze die Schriftfarbe auf "antiquewhite" */
-    background: midnightblue; /* Setze die Hintergrundfarbe auf "midnightblue" */
+.start-button:hover {
+    transition: var(--transitionDelay);
+    font-family: var(--font);
+    background-color: rgb(30, 30, 120);
 }
 
-.rules { /* Definiere das Objekt mit der Klassen ".rules" */
-    padding: 1rem 1rem 1rem 1rem; /* Setze die größe des Objekts auf 10px in jede Richtung */
-    margin: 1rem 0 1rem 0; /* Setze den Abstand zu anderen Objekten (Oben, Link, Unten, Rechts) */
-    border: black .5px solid; /* Setze die Umrandung des Objektes auf eine solide, weiße, 1/2 Pixel dicke linie */
-    border-radius: 5px; /* Sage, dass die Ecken 5px abgerundet sind */
-    color: antiquewhite; /* Setze die Schriftfarbe auf "antiquewhite" */
-    background: linear-gradient(#36954f, #2c8042) no-repeat; /* Setze den Hintergrund auf einen Farbverlauf */
+.rules {
+    padding: 1rem 1rem 1rem 1rem;
+    margin-top: 1rem;
+    border: var(--border);
+    border-radius: var(--borderRadius);
+    background-color: rgb(80, 240, 200);
+    background-image: linear-gradient(320deg, rgb(90, 180, 140) 0%, rgb(60, 60, 60) 70%);
 }
 
-.rule-list { /* Definiere das Objekt mit der Klasse ".rule-list" */
-    list-style: decimal; /* Setze den Still der Auflistung auf eine Nummerierung */
-    letter-spacing: 1.5px; /* Setze die größe von Leerzeichen auf 1.5px */
+.rule-list {
+    list-style: decimal;
+    letter-spacing: var(--letterSpace);
 }
 
-.single-rule { /* Definiere das Objekt mit der Klasse ".single-rule" */
-    color: black; /* Setze die Schriftfarbe auf Schwarz */
+.single-rule {
+    color: var(--textColor);
 }
 
-.name { /* Definiere das Objekt mit der Klasse ".name" */
-    color: white; /* Setze die Schriftfarbe auf weiß */
+.name {
+    font-weight: 700;
+    color: var(--textColor);
+}
+
+.logo {
+    margin-top: 1rem;
+    background-color: #2b4162;
+    background-image: linear-gradient(320deg, #2b4162 0%, #12100e 70%);
+    border: var(--border);
+    border-radius: var(--borderRadius);
 }
